cut into multiple paragraph

--- a/memory.html
+++ b/memory.html
@@ -9,7 +9,9 @@
 	<body>
 		<h1>Memory</h1>
 		<h2>Find identical cards</h2>
-		<p>Click onto <select id="copyNumber" disabled><option>2</option><option selected>3</option><option>4</option><option>5</option><option>6</option></select> cards to reveal their <select id="distinctNumber" disabled><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option selected>7</option></select> distinct pictures. If they are not all identical, you have <select id="memorizeDuration" disabled><option>1</option><option>2</option><option selected>3</option><option>4</option><option>5</option><option>6</option><option>7</option></select> seconds to memorize. If they are all identical, you can continue immediately.</p>
+		<p>Click onto <select id="copyNumber" disabled><option>2</option><option selected>3</option><option>4</option><option>5</option><option>6</option></select> cards to reveal their <select id="distinctNumber" disabled><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option selected>7</option></select> distinct pictures.</p>
+		<p>If they are not all identical, you have <select id="memorizeDuration" disabled><option>1</option><option>2</option><option selected>3</option><option>4</option><option>5</option><option>6</option><option>7</option></select> seconds to memorize.</p>
+		<p>If they are all identical, you can continue immediately.</p>
 		<div id="gameTable"></div>
 		<script src="https://cdn.jsdelivr.net/gh/cl4cnam/funcSug/libStd.fg" type="application/funcsug"></script>
 		<script src="https://cdn.jsdelivr.net/gh/cl4cnam/funcSug/libDOM.fg" type="application/funcsug"></script>
