add langage choice

--- a/memory.html
+++ b/memory.html
@@ -7,6 +7,12 @@
 		<link rel="stylesheet" href="memory.css">
 	</head>
 	<body>
+		<header>
+			<select id="lagage">
+				<option selected>English</option>
+				<option>Français</option>
+			</select>
+		</header>
 		<h1>Memory</h1>
 		<h2>Find identical cards</h2>
 		<p>Click onto <select id="copyNumber" disabled><option>2</option><option selected>3</option><option>4</option><option>5</option><option>6</option></select> cards to reveal their <select id="distinctNumber" disabled><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option selected>7</option></select> distinct pictures.</p>
