--- a/memory.html
+++ b/memory.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<select id="lagage">
+			<select id="langage">
 				<option selected>English</option>
 				<option>Français</option>
 			</select>
