--- a/memory.html
+++ b/memory.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Memory</title>
+		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/cl4cnam/funcSug@b3f8fb8eafcc4dac5a72d87018c743db42437226/lib.css">
 		<link rel="stylesheet" href="memory.css">
 	</head>
