--- a/memory.html
+++ b/memory.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=700, initial-scale=1" />
 		<title>Memory</title>
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/cl4cnam/funcSug@b3f8fb8eafcc4dac5a72d87018c743db42437226/lib.css">
